# ai_coding_example

./: .gitignore  CMakeLists.txt  README.md  config.cmd  vcpkg.json
cpp/calfem_cpp/: beam1e.py  beam1s.cpp  beam1s.h  prompt.md
cpp/calfem_cpp/final/: CMakeLists.txt  beam1s.h  example_usage.cpp
cpp/documenting_cpp/: glfw_window.h  glfw_window_orig.h  prompt.md
cpp/documenting_cpp/final/: glfw_window.h
cpp/imgui_glfw/: prompt.md
cpp/imgui_glfw/final/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
cpp/objsolver/: CMakeLists.txt  CMakePresets.json  benchmark_results.txt  vcpkg.json
cpp/objsolver/.claude/: settings.json
cpp/objsolver/include/ofem/: base.h
cpp/objsolver/include/ofsolve/: calfem.h
cpp/objsolver/src/fem/: CMakeLists.txt  material_set.cpp
cpp/objsolver/src/ofsolve/: CMakeLists.txt  calfem.cpp
cpp/objsolver/src/ofsolver/: main.cpp
cpp/objsolver/src/util/: ResultInfo.cpp
cpp/objsolver_original/: CMakePresets.json
cpp/objsolver_original/src/ofsolve/: beam_solver.cpp  calfem.cpp
cpp/objsolver_original/src/ofsolver/: CMakeLists.txt  main.cpp
cpp/objsolver_original/src/util/: CMakeLists.txt  ResultInfo.h
cpp/particles/: prompts.md
cpp/particles/final/: CMakeLists.txt  README.md  vcpkg.json
cpp/particles/final/include/: Particles.h
cpp/particles/final/src/: Particles.cpp  main.cpp
general/latex_to_rst/: bar1e.rst  bar1e.tex  prompt.md
general/latex_to_rst/final/: bar1e.rst
general/updating_docs/: matrix_functions.rst  matrix_functions_updated.rst  prompt.md
include/: particle.h  particles.h  vector_math.h
python/: prompts.md  qt_example.py  traverse_dir.py  traverse_dir_final.py
python/calfem/: ex1_modified_func.py  ex1_oop.py  ex1_original.py  ex2.py  ex2_opt1.py  ex2_opt2.py  ex2_opt3.py  ex2_opt4.py  ex2_original.py  output.prof  prompt_ai_opt.md  prompts_doc_refactor.md
python/countries/: prompt.md
python/countries/final/: countries.py  countries_ui.py  example.py  main.py
python/general/: prompts.md
python/general/final/: qt_example_final.py
python/qt_user_interface/: beam_ui_table.py  prompt.md
python/qt_user_interface/final/: beam_ui.py  requirements.txt  run_ui.py
src/: CMakeLists.txt  main.cpp  particle.cpp  particles.cpp  vector_math.cpp
src/final/: main_final.cpp  particles_final.cpp
